--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -9,5 +9,12 @@
 @media (max-width: 768px) {
   .sidebar {
     max-height: 60%;
+    padding-top: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 363px) {
+  .sidebar {
+    padding-top: 1.6rem;
   }
 }
