--- a/src/pages/AppLayout.module.css
+++ b/src/pages/AppLayout.module.css
@@ -1,9 +1,10 @@
 .app {
-  height: 100vh;
+  height: 100svh;
   padding: 2.4rem;
   overscroll-behavior-y: none;
   display: flex;
   position: relative;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 768px) {
